--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,18 @@
 }
 
 
+.bg-black{
+    background-color: rgb(31, 28, 28);
+}
+
+
 .text-align-center{
     text-align: center;
+}
+
+
+.text-align-left{
+    text-align: left;
 }
 
 
@@ -21,19 +31,63 @@
 }
 
 
-.pt-30{
-    padding-top: 30px;
+.pt-25{
+    padding-top: 25px;
 }
 
 
-header{
+.text-header{
     font-family: 'Public Sans', sans-serif;
     color: rgba(228, 48, 112, 255)
 }
 
+.name-postcard{
+    font-family: 'Public Sans', sans-serif;
+}
+
+.text-color{
+    color: white;
+}
 
 .text-font{
     font-weight: 600;
     font-size: 14px;
 }
 
+
+.card-flex{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+.flex-space-between{
+    justify-content: space-between;
+}
+
+
+.inline-b{
+    display: inline-block;
+}
+
+.text-padding{
+    padding-left: 8px;
+    padding-top: 5px;
+}
+
+img {
+    float: left;
+}
+
+.card-right-padding{
+    padding-right: 50px;
+}
+
+h3, p{
+    padding-bottom: 5px;
+}
+
+
+.postcard-shadow{
+    box-shadow: -2px -4px 8px #888888
+}
