--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,28 @@
 }
 
 
+.m-top{
+    margin-top: 5px;
+}
+
+
 .bg-black{
     background-color: rgb(31, 28, 28);
+}
+
+
+.bg-blue{
+    background-color: blue;
+}
+
+
+.bg-yellow{
+    background-color: yellow;
+}
+
+
+.bg-red{
+    background-color: red;
 }
 
 
@@ -60,6 +80,10 @@
     gap: 40px;
 }
 
+.g-10{
+    gap: 10px
+}
+
 .card-flex{
     display: flex;
     flex-wrap: wrap;
@@ -68,6 +92,7 @@
 
 .card-width{
     width:30%;
+    min-width: 250px;
 }
 
 
@@ -76,9 +101,27 @@
 }
 
 
+.flex-space-around {
+    justify-content: space-around;
+}
+
+
+.align-items-center{
+    align-items: center;
+}
+
+
+.header-flex {
+    display: flex;
+    flex-wrap: wrap;
+    height: 40px;
+}
+
+
 .inline-b{
     display: inline-block;
 }
+
 
 .text-padding{
     padding-top: 5px;
@@ -101,3 +144,7 @@ h3, p{
     box-shadow: -2px -4px 8px #888888
 }
 
+
+#header-height{
+    height: 40px;
+}
