added hr on footer

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,11 @@
     color: white;
 }
 
+
+.c-black{
+    color: rgb(31, 28, 28);
+}
+
 .text-font{
     font-weight: 600;
     font-size: 14px;
@@ -147,4 +152,10 @@ h3, p{
 
 #header-height{
     height: 40px;
+}
+
+
+hr{
+    border: 2px solid rgb(31, 28, 28);
+    margin-top: 60px;
 }
